<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@drawable/mmtitle_bg"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/chat_more_btn_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/btn_save"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/chat_more_btn_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/btn_submit"
            android:textColor="@color/white" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rl_head"
        android:layout_marginTop="5dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/ll_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publish_title"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_title"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publish_content"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="fill_parent"
                    android:layout_height="180dp"
                    android:ems="10"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="textMultiLine"
                    android:maxLength="1000" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_contact"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_content"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/spn_contact"
                    android:layout_width="100dp"
                    android:layout_height="50dp" />

                <EditText
                    android:id="@+id/et_contact"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="phone"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tag"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_contact"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publish_tag"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_tag"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:hint="@string/et_tag"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:maxLength="10"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tag2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_tag"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publish_tag"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_tag2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:hint="@string/et_tag"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:maxLength="10"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tag3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_tag2"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publish_tag"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_tag3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:hint="@string/et_tag"
                    android:imeOptions="flagNoExtractUi|actionDone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>